RootAligned forward predictions

--- a/syntheseus/reaction_prediction/inference/default_checkpoint_links.yml
+++ b/syntheseus/reaction_prediction/inference/default_checkpoint_links.yml
@@ -9,3 +9,4 @@ backward:
   RootAligned: https://figshare.com/ndownloader/files/42012792
 forward:
   Chemformer: https://figshare.com/ndownloader/files/42012708
+  RootAligned: https://www.dropbox.com/scl/fi/35pexvrp33pi7qem3o89o/model.zip?rlkey=eb5n0hem6hlcvowm34j3afujo&st=67fwj1o8&dl=1
